--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="hero">
+        <div class="container">
+            <div class="clock">
+                00:00:00
+            </div>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
